--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+tr {
+  max-width: 500px;
+}
+h1,
+p {
+  text-align: center;
+}
